--- a/Project/Pages/Login.xaml
+++ b/Project/Pages/Login.xaml
@@ -9,47 +9,68 @@
       Title="Login">
 
     <Grid Background="#FFE5E5E5">
-        <Border Background="White" CornerRadius="10" Height="278" VerticalAlignment="Center" HorizontalAlignment="Center" Width="500">
-            <Grid Margin="0,10,0,10" Background="White">
-
+        <Border Background="White" CornerRadius="10" Height="333" VerticalAlignment="Center" HorizontalAlignment="Center" Width="500">
+            <Grid Margin="20">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="10"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="5"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="10"/>
+                    <RowDefinition Height="15"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="5"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="15"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="5"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="20"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="10"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="5"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
+
                 <Label Content="Авторизация" Grid.Row="0"
-                   HorizontalAlignment="Center"
-                   FontFamily="Verdana" FontWeight="Bold" FontSize="24" Margin="0,10,0,0" Grid.RowSpan="2"/>
-                <TextBox Text="Почта xx@xx.xx" x:Name="txtUsername" Grid.Row="2"
-                     Height="30" Width="350" Foreground="#FFA6A6A6" 
-                     FontFamily="Verdana" HorizontalAlignment="Center" Padding="0,0,50,0" ScrollViewer.CanContentScroll="True" SelectionOpacity="-26" BorderThickness="1,1,1,1" RenderTransformOrigin="0.5,0.5" BorderBrush="#FFE6E6E6" Margin="0,3,0,2" Grid.RowSpan="2"/>
-                <TextBox x:Name="txtPassword" Grid.Row="4"
-                     Height="30" Width="350" Text="Пароль" Foreground="#FFA6A6A6" 
-                     FontFamily="Verdana" HorizontalAlignment="Center" BorderBrush="#FFE6E6E6" Margin="0,3,0,50" Grid.RowSpan="2"/>
-                <Button Content="Авторизоваться" Grid.Row="5"
-                    Height="34" Background="Black" Foreground="White" 
-                    FontWeight="Bold" Click="Bt_Login" 
-                    HorizontalAlignment="Center" Width="350" 
-                    FontFamily="Verdana" Margin="0,45,0,24" Grid.RowSpan="5"/>
-                <TextBlock Text="Или" Grid.Row="8" FontWeight="Bold" 
-                      HorizontalAlignment="Center" FontFamily="Verdana" Margin="0,13,0,3" Grid.RowSpan="2"/>
-                <TextBlock Text="Создать аккаунт" Grid.Row="9" 
-       HorizontalAlignment="Center" Foreground="#FF0F0FE3" FontFamily="Verdana" Margin="0,28,0,-26"
-       MouseDown="RegisterText_MouseDown" FontWeight="Bold" TextDecorations="Underline">
+                       HorizontalAlignment="Center"
+                       FontFamily="Verdana" FontWeight="Bold" FontSize="24"/>
+
+                <Label Content="Email" Grid.Row="2"
+                       HorizontalAlignment="Left"
+                       FontFamily="Verdana" FontSize="12"/>
+
+                <TextBox x:Name="txtUsername" Grid.Row="4"
+                         Height="30" 
+                         FontFamily="Verdana"
+                         Text="xx@xx.xx"
+                         Foreground="Gray"/>
+
+                <Label Content="Пароль" Grid.Row="6"
+                       HorizontalAlignment="Left"
+                       FontFamily="Verdana" FontSize="12"/>
+
+                <PasswordBox x:Name="txtPassword" Grid.Row="8"
+                         Height="30" 
+                         FontFamily="Verdana"/>
+
+                <Button Content="Войти" Grid.Row="10"
+                        Height="35" Background="Black" Foreground="White"
+                        FontWeight="Bold" Click="Bt_Login"
+                        FontFamily="Verdana" BorderBrush="Black"/>
+
+                <TextBlock Text="Или" Grid.Row="12" 
+                          HorizontalAlignment="Center"
+                          FontFamily="Verdana"/>
+
+                <TextBlock Text="Создать аккаунт" Grid.Row="14" 
+                          HorizontalAlignment="Center" Foreground="#FF000083"
+                          FontFamily="Verdana" FontWeight="Bold"
+                          MouseDown="RegisterText_MouseDown">
                     <TextBlock.Style>
                         <Style TargetType="TextBlock">
                             <Setter Property="Cursor" Value="Hand"/>
-                            <Setter Property="Foreground" Value="Blue"/>
+                            <Setter Property="TextDecorations" Value="Underline"/>
                             <Style.Triggers>
                                 <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter Property="TextDecorations" Value="Underline"/>
+                                    <Setter Property="Foreground" Value="White"/>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
