--- a/Project/Pages/PersonalAccount.xaml
+++ b/Project/Pages/PersonalAccount.xaml
@@ -120,11 +120,11 @@
                    FontWeight="Bold" 
                    FontSize="14"/>
 
-            <TextBlock Grid.Row="5" 
+            <TextBlock Grid.Row="6" 
                        Grid.ColumnSpan="3" 
                        TextWrapping="Wrap"
                        Text="{Binding Biography}"
-                       FontFamily="Verdana" Margin="0,5,0,0" Grid.RowSpan="2"/>
+                       FontFamily="Verdana" Margin="0,5,0,0"/>
         </Grid>
     </Grid>
 </Page>
